--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,31 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="511.98"
+    android:viewportHeight="511.98">
     <path
+        android:pathData="M491.86,156.35c-12.89,-30.48 -31.34,-57.87 -54.84,-81.37c-23.52,-23.5 -50.9,-41.96 -81.37,-54.85c-31.56,-13.35 -65.09,-20.13 -99.65,-20.13c-34.55,0 -68.08,6.77 -99.64,20.13c-30.48,12.89 -57.87,31.35 -81.37,54.85c-23.5,23.51 -41.96,50.89 -54.85,81.37C6.77,187.91 0,221.44 0,255.99c0,34.56 6.77,68.09 20.13,99.65c12.89,30.47 31.35,57.86 54.85,81.36c23.51,23.52 50.89,41.97 81.37,54.86c31.56,13.34 65.09,20.13 99.64,20.13c34.56,0 68.09,-6.78 99.65,-20.13c30.47,-12.89 57.86,-31.34 81.37,-54.86c23.5,-23.5 41.95,-50.89 54.84,-81.36c13.34,-31.56 20.13,-65.09 20.13,-99.65C511.98,221.44 505.2,187.91 491.86,156.35z"
+        android:fillColor="#ED5564" />
+    <path
+        android:pathData="M0.1,263.18c0.88,32.01 7.59,63.09 20.02,92.46c12.89,30.47 31.35,57.86 54.85,81.36c23.51,23.52 50.89,41.97 81.37,54.86c31.56,13.34 65.09,20.13 99.64,20.13c34.56,0 68.09,-6.78 99.65,-20.13c30.47,-12.89 57.86,-31.34 81.37,-54.86c23.5,-23.5 41.95,-50.89 54.84,-81.36c12.44,-29.37 19.16,-60.45 20.03,-92.46H0.1z"
+        android:fillColor="#E6E9ED" />
+    <path
+        android:pathData="M510.77,281.21c0.81,-8.34 1.22,-16.75 1.22,-25.22c0,-9.52 -0.52,-18.95 -1.53,-28.29c-12.72,1.96 -30.98,4.52 -54,7.05c-43.69,4.82 -113.9,10.57 -200.46,10.57c-86.55,0 -156.78,-5.75 -200.46,-10.57c-23.02,-2.54 -41.28,-5.09 -54,-7.05C0.52,237.04 0,246.48 0,255.99c0,8.47 0.41,16.88 1.22,25.22c41.53,6.25 133.03,17.44 254.77,17.44S469.23,287.46 510.77,281.21z"
+        android:fillColor="#434A54" />
+    <path
+        android:pathData="M309.33,266.66c0,29.46 -23.89,53.33 -53.34,53.33c-29.45,0 -53.33,-23.88 -53.33,-53.33c0,-29.45 23.88,-53.33 53.33,-53.33C285.44,213.33 309.33,237.2 309.33,266.66z"
+        android:fillColor="#E6E9ED" />
+    <path
+        android:pathData="M255.99,170.66c-52.94,0 -96,43.07 -96,96s43.06,95.99 96,95.99s96,-43.06 96,-95.99C351.99,213.73 308.93,170.66 255.99,170.66zM255.99,309.33c-23.52,0 -42.66,-19.16 -42.66,-42.68c0,-23.52 19.14,-42.66 42.66,-42.66c23.53,0 42.65,19.14 42.65,42.66C298.65,290.18 279.52,309.33 255.99,309.33z"
+        android:fillColor="#434A54" />
+    <path
+        android:pathData="M491.86,156.35c-12.89,-30.48 -31.34,-57.87 -54.84,-81.37c-23.52,-23.5 -50.9,-41.96 -81.37,-54.85c-31.56,-13.35 -65.09,-20.13 -99.65,-20.13c-3.57,0 -7.13,0.08 -10.66,0.22c30.79,1.25 60.66,7.93 88.97,19.91c30.5,12.89 57.87,31.35 81.37,54.85c23.5,23.51 41.97,50.89 54.86,81.37c13.36,31.56 20.11,65.09 20.11,99.65c0,34.56 -6.75,68.09 -20.11,99.65c-12.89,30.47 -31.36,57.86 -54.86,81.36c-23.5,23.52 -50.87,41.97 -81.37,54.86c-28.31,11.97 -58.19,18.66 -88.97,19.91c3.54,0.14 7.09,0.22 10.66,0.22c34.56,0 68.09,-6.78 99.65,-20.13c30.47,-12.89 57.86,-31.34 81.37,-54.86c23.5,-23.5 41.95,-50.89 54.84,-81.36c13.34,-31.56 20.13,-65.09 20.13,-99.65C511.98,221.44 505.2,187.91 491.86,156.35z"
+        android:strokeAlpha="0.2"
         android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:fillAlpha="0.2" />
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M20.13,355.64c12.89,30.47 31.35,57.86 54.85,81.36c23.51,23.52 50.89,41.97 81.37,54.86c31.56,13.34 65.09,20.13 99.64,20.13c3.57,0 7.13,-0.08 10.66,-0.22c-30.79,-1.25 -60.67,-7.94 -88.98,-19.91c-30.48,-12.89 -57.86,-31.34 -81.36,-54.86c-23.51,-23.5 -41.96,-50.89 -54.86,-81.36c-13.35,-31.56 -20.12,-65.09 -20.12,-99.65c0,-34.55 6.76,-68.08 20.12,-99.65C54.35,125.86 72.8,98.48 96.31,74.98c23.51,-23.51 50.88,-41.97 81.36,-54.86c28.31,-11.98 58.19,-18.66 88.98,-19.91c-3.54,-0.14 -7.09,-0.22 -10.66,-0.22c-34.55,0 -68.08,6.77 -99.64,20.13c-30.48,12.89 -57.87,31.35 -81.37,54.86c-23.5,23.5 -41.96,50.88 -54.85,81.36C6.77,187.91 0,221.44 0,255.99C0,290.55 6.77,324.08 20.13,355.64z"
+        android:strokeAlpha="0.1"
+        android:fillAlpha="0.1" />
 </vector>
